// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="css-H1-1h0h3nx1 css-s9f816"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="css-H1-1h0h3nx0 css-ijh7uz"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".css-ijh7uz{font-size:12px;}
.css-s9f816{font-size:20px;}.css-s9f816 span{color:blue;}.css-s9f816 span:hover{color:green;}.css-s9f816 span:hover:after{content:'after';}
html{background:pink;}
.css-14yvnlz{font-family:sans-serif;color:yellow;background-color:purple;}"
`;
